--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 			            <h2>A Python Developer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <!-- <p><a href="https://www.youtube.com/@RishabhMishraOfficial" class="btn btn-primary py-3 px-4">YouTube</a> -->
+			             
 							<p><a href="https://www.linkedin.com/in/waqas-ahmad-b2127a252/" class="btn btn-primary py-3 px-4">LinkedIn</a>  
 							<a href="https://github.com/Waqas0049" class="btn btn-primary py-3 px-4">My works</a></p> <!-- for white and black buttonbtn btn-white btn-outline-white py-3 px-4-->
 		            </div>
@@ -564,7 +564,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:deekshithkrishnagowda@gmail.com">waqasgithub49@gmail.com</a></p>
+	            <p><a href="mailto:waqasgithub49@gmail.com">waqasgithub49@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -588,11 +588,11 @@
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on </li>
-					  <!-- <li class="ftco-animate"><a href="https://www.youtube.com/@RishabhMishraOfficial"><span class="icon-youtube"></span></a></li> -->
+					  <li class="ftco-animate"><a href=""><span class="icon-youtube"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/waqas-ahmad-b2127a252/"><span class="icon-linkedin"></span></a></li>  
-					  <!-- <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span class="icon-twitter"></span></a></li>
-					  <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span class="icon-facebook"></span></a></li>
-				      <li class="ftco-animate"><a href="https://www.instagram.com/rishabhnmishra/"><span class="icon-instagram"></span></a></li> -->
+					  <li class="ftco-animate"><a href=""><span class="icon-twitter"></span></a></li>
+					  <li class="ftco-animate"><a href=" "><span class="icon-facebook"></span></a></li>
+				          <li class="ftco-animate"><a href="https://www.instagram.com/itsme__waqas49?igsh=NXlhcWZjaW8xeGdw"><span class="icon-instagram"></span></a></li>
 					  <li class="ftco-animate"><a href="https://github.com/Waqas0049"><span class="icon-github"></span></a></li>  
 					</ul>
 				<br>
